--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+p.textmessage {
+    padding: 0.3rem;
+}
 
-.microphone-svg {
+.microphone-svgXXX {
     margin: 0.5rem;
     /* border-radius: 50%; */
     /*width: 60px;
