Reworked version of the code that removes the useState for statusText in useRecording, as this was causing issues with the AudioSpectrumPlayer.  Wide range of changes so components audio-related components do not get called multiple times in a single lifecycle. Debugging statements still included.  In reponse to some cross-browser testing, also now controls the mimetype for audio to be something the browser supports, and is compatible with the OpenAI API

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,12 +41,25 @@ p.textmessage {
 
 
 .microphone-level {
-    border-bottom: 1px black solid;
+    border: 1px black solid;
     position: absolute;
     bottom: 0;
-    right: -60%; 
     width: 30%;
-    height: 0%;
-    background-color: rgba(230,10,10,1.0);
+    height: 100%;
+    clip-rect: xywh(0 100% 100% 0);
+    
+    background-image:  linear-gradient(to top, lightgreen, lightgreen, red); 
+    /*background-color:  rgba(220,10,10,1); */
+}
+
+
+.microphone-level-left {
+    left: -60%; 
+}
+
+
+
+.microphone-level-right {
+    right: -60%; 
 }
 
