Basic show/hide text added in

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,13 +54,15 @@ p.textmessage {
 
 
 .microphone-level-left {
-    left: -60%; 
+    left: -60%;
+    display: none;
 }
 
 
 
 .microphone-level-right {
     right: -60%; 
+    display: none;
 }
 
 /*
