--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,17 @@ p.textmessage {
     padding: 0.3rem;
 }
 
+.textmessage ol {
+    list-style: decimal;
+    padding-left: 2rem;
+}
+
+.textmessage ul {
+   list-style-type: disc; 
+   list-style-position: inside;
+   padding-left: 2rem;
+}
+
 .microphone-svgXXX {
     margin: 0.5rem;
     /* border-radius: 50%; */
@@ -63,6 +74,31 @@ p.textmessage {
 .microphone-level-right {
     right: -60%; 
     display: none;
+}
+
+.show-hide-block {
+    min-width: 876px;
+    background-color: #F4F4F4;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+
+@media screen and (max-width: 970px) {
+    .show-hide-block {
+	min-width: 750px;	
+    }
+}
+
+@media screen and (max-width: 680px) {
+    .show-hide-block {
+	min-width: 450px;	
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .show-hide-block {
+	min-width: 390px;	
+    }
 }
 
 /*
