--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@ p.textmessage {
 
 .textmessage ul {
    list-style-type: disc; 
-   list-style-position: inside;
+   /* list-style-position: inside; */
    padding-left: 2rem;
 }
 
